Bug 405857 - KOrganizer Calendar event time not saved
Summary: KOrganizer Calendar event time not saved
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-25 12:01 UTC by morel.josh
Modified: 2020-07-02 21:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description morel.josh 2019-03-25 12:01:34 UTC
SUMMARY

When trying to save a new event with KOrganizer's calendar with a specific time the time is not retained. I found similar issues through a web search but they were very old and not sure if this is a regression or slightly different issue (https://kde-bugs-dist.kde.narkive.com/C9BFxBZE/korganizer-bug-361764-new-cannot-add-event-to-calendar-with-correct-time-add-event-window-will-not). 

STEPS TO REPRODUCE
1. Open KOrganizer calendar
2. Click New Event
3. Deselect All Day
4. Enter details including specific start and end time that is not 12:00 AM
5. Click Apply

OBSERVED RESULT

Both times reset to 12:00 AM


EXPECTED RESULT

Times are retained as saved

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 5.15
(available in About System)
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.0

ADDITIONAL INFORMATION
I'm using "en_CA" (English Canada) locale and "America/Toronto" time zone.
Comment 1 gjditchfield 2020-05-04 22:08:45 UTC
This looks like the same problem as bug 410167:  something is wrong with the Canadian locale, but KOrganizer works properly with the US English locale.  Can you try running "LANG=en_US.UTF-8; korganizer" in a terminal to see if that is the root cause?
Comment 2 Bug Janitor Service 2020-05-19 04:33:13 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 morel.josh 2020-05-20 18:20:08 UTC
(In reply to gjditchfield from comment #1)
> This looks like the same problem as bug 410167:  something is wrong with the
> Canadian locale, but KOrganizer works properly with the US English locale. 
> Can you try running "LANG=en_US.UTF-8; korganizer" in a terminal to see if
> that is the root cause?

I switched to Kubuntu from KDE Neon since posting and it seems to be okay Canadian locale with Korganizer 5.15.3 & these set of libraries:

KDE Plasma Version: 5.12.9
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

I guess we can close it although something weird is going on either with the older version of Korganizer or newer version of the above used in KDE Neon.
Comment 4 gjditchfield 2020-05-20 18:56:16 UTC
Did you switch to Kubuntu 20.04?  Somewhere around here there's a bug that suggests that 20.04's Canadian English locale is fixed, compared to the 18.04 and Neon version.
Comment 5 morel.josh 2020-05-20 20:59:31 UTC
(In reply to gjditchfield from comment #4)
> Did you switch to Kubuntu 20.04?  Somewhere around here there's a bug that
> suggests that 20.04's Canadian English locale is fixed, compared to the
> 18.04 and Neon version.

No switched to Kubuntu 18.04 from Neon 18.04 and haven't upgraded yet.
Comment 6 gjditchfield 2020-05-31 20:33:28 UTC
Note: /usr/share/i18n/locale/en_CA is the same in Kubuntu 18.04 and Neon 18.04, so it's the software, not the localefile.
Comment 7 morel.josh 2020-06-05 03:09:04 UTC
Okay. Not sure what the source of the issue or resolution is but seems to be okay.
Comment 8 Philippe Cloutier 2020-06-30 01:06:18 UTC
(In reply to gjditchfield from comment #6)
> Note: /usr/share/i18n/locale/en_CA is the same in Kubuntu 18.04 and Neon
> 18.04, so it's the software, not the localefile.

I suppose Glen meant /usr/share/i18n/locales/en_CA.
I think that statement is misleading though. I do not know what solved the problem with en_CA, and I do think the actual bug was algorithmic, but I imagine the change which caused the behavior to change is a change in locale definition. However, Qt (QLocale) has its own locale definitions (coming from CLDR).
Comment 9 Albert Astals Cid 2020-07-02 20:46:48 UTC
Git commit 37c9ebe699e33f84700489982da301bdf8727bd3 by Albert Astals Cid, on behalf of Glen Ditchfield.
Committed on 02/07/2020 at 20:46.
Pushed by aacid into branch 'master'.

Fix KTimeComboBox for locales with unusual characters in formats

KTimeComboBox creates an edit mask by replacing the AM/PM indicator in
a formatted time with 'a' ("optional alphabetic") mask characters.
This does not work for locales that use punctuation in the indicator, such
as the current en_CA format "9:00 A.M.".  This patch uses mask character
'x' ("optional non-blank").

The current fr_CA time format contains an embedded 'h':  "9 h 00".  'h' is
an edit mask character ("optional hexadecimal digit"), so the generated
mask rejects properly-formatted times.  This patch escapes all characters
that are not supposed to be mask characters.

Credit to Filipus Klutiero for a detailed explanation of the errors.
```
Related: bug 406240, bug 409867, bug 410167, bug 411820, bug 412506, bug 420468
```

M  +52   -3    autotests/ktimecomboboxtest.cpp
M  +5    -0    autotests/ktimecomboboxtest.h
M  +26   -23   src/ktimecombobox.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/commit/37c9ebe699e33f84700489982da301bdf8727bd3